gitops/platform/tailscale/base/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tailscale-operator
  namespace: tailscale
spec:
  endpointSelector:
    matchLabels:
      app: operator
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - kube-apiserver
    - toFQDNs:
        - matchName: controlplane.tailscale.com
        - matchName: login.tailscale.com
        - matchName: log.tailscale.io
        - matchPattern: "*.tailscale.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
